app/containers/EMMCases/style.scss
@import "../../styles/global-styles.scss";


.pointer {
    cursor: pointer;
}

.EMM-CASES {
    .open-report {
        background: #f3f3f3;
        border: #f3f3f3;
        padding: 8px 16px;
        font-size: 18px;
        line-height: 24px;
        color: #000000;
    }
    span.in-progress {
        font-size: 14px;
        line-height: 19px;
        opacity: 0.8;
    }
    
    .input-field {
        margin-bottom: 32px !important;
    }
    .search,
    .header,
    .page-search,
    .recent,
    .page-subtitle {
        padding-left: 16px;
    }
    .header {
        font-size: 26px;
        line-height: 36px;
        padding-bottom: 24px;
    }
    .search {
        font-size: 18px;
        font-weight: bold;
        line-height: 24px;
    }
    
    .recent {
        font-size: 18px;
        font-weight: bold;
        line-height: 24px;
        margin-top: 120px;
    }
    
}

